--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body>
 	
 	<header>
-		<h1>Task List 2021</h1>
+		<h1>TO-DO-LIST</h1>
 		<form id="new-task-form">
 			<input 
 				type="text" 
 				name="new-task-input" 
 				id="new-task-input" 
-				placeholder="What do you have planned?" />
+				placeholder="Enter a new task" />
 			<input 
 				type="submit"
 				id="new-task-submit" 
